# angle_only

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake
docs/: architecture.md  examples.md  getting_started.md  index.md  matlab_migration.md  mkdocs.yml
docs/api/: cpp.md  python.md
examples/cpp/: passive_ranging.cpp
examples/python/: passive_ranging_demo.py  visualization_demo.py
include/angle_only/: angle_only.hpp
include/angle_only/association/: gating.hpp  gnn.hpp  jpda.hpp
include/angle_only/coords/: angle_wrap.hpp  frames.hpp  transforms.hpp
include/angle_only/core/: concepts.hpp  constants.hpp  detection.hpp  state.hpp  types.hpp
include/angle_only/filters/: ekf.hpp  gmphd.hpp  msc_ekf.hpp
include/angle_only/fusion/: static_detection_fuser.hpp  triangulate_los.hpp
include/angle_only/gpu/: dispatch.hpp
include/angle_only/measurement/: msc_measurement.hpp  spherical_measurement.hpp
include/angle_only/motion/: ca.hpp  constant_velocity_msc.hpp  ct.hpp  cv.hpp
matlab/: CMakeLists.txt  setup.m
matlab/+aot/: GMPHD.m  MSCEKF.m  auction_assign.m  az_el_to_unit_vector.m  cartesian_to_msc.m  cartesian_to_spherical.m  chi2_gate.m  gate.m  gnn_assign.m  initcvmscekf.m  jpda_probabilities.m  mahalanobis_distance.m  msc_to_cartesian.m  spherical_to_cartesian.m  triangulateLOS.m  wrap_to_pi.m
matlab/examples/: passive_ranging_demo.m
matlab/src/: angle_only_mex.cpp  mex_utils.hpp  object_store.hpp
python/: CMakeLists.txt  pyproject.toml
python/angle_only/: __init__.py  compat.py  filters_py.py  fusion_py.py  visualization.py
python/src/: bind_association.cpp  bind_coords.cpp  bind_core.cpp  bind_filters.cpp  bind_fusion.cpp  bind_gpu.cpp  bind_measurement.cpp  bind_motion.cpp  bindings.cpp
scripts/: generate_plots.py
src/association/: gating.cpp  gnn.cpp  jpda.cpp
src/coords/: transforms.cpp
src/core/: state.cpp
src/filters/: ekf.cpp  gmphd.cpp  msc_ekf.cpp
src/fusion/: static_detection_fuser.cpp  triangulate_los.cpp
src/gpu/: batch_operations_cpu.cpp  dispatch.cpp
src/measurement/: msc_measurement.cpp  spherical_measurement.cpp
src/motion/: ca.cpp  constant_velocity_msc.cpp  ct.cpp  cv.cpp
tests/cpp/: CMakeLists.txt  test_association.cpp  test_batch_ops.cpp  test_gmphd.cpp  test_measurement_models.cpp  test_motion_models.cpp  test_msc_ekf.cpp  test_msc_state.cpp  test_transforms.cpp  test_triangulate.cpp
tests/integration/: test_passive_ranging.py
tests/python/: conftest.py  test_association.py  test_coords.py  test_filters.py  test_fusion.py  test_gpu.py
